# mail-eagle-newsletter

./: .env.example  .gitignore  Dockerfile  README.md  Test-Email-webhoch.rtf  app.py  blacklist.txt  config.json  config.json.tmp  docker-compose.yaml  emaillist.txt  failed.html  failed_emails.json  large_data_generator.py  mail-sender.py  mail_sender-teststuff.py  mail_sender.py  main.py  notes.md  pyproject.toml  requirements.txt  requiremnts.txt  sendfailedmails.py  start.sh  test.csv  testhochstevanmichi.csv  testmanymails.txt
notes/: main.py
templates/: admin.html  all-emails-table.html  base.html  blacklist-csv-form.html  blacklist-entry-form.html  blacklist-table.html  blacklist.html  configure-emails.html  configure.html  email-sender-card.html  email-sender-form.html  failed-email-table.html  index.html  job-information-card.html  job-stats.html  jobs-form.html  jobs-table.html  jobs.html  logging.html  login.html  open-job.html  successful-emails-table.html  unsubscribe.html  unsubscribe_form.html  user-data.html
uploads/: 3b8f6af5-9f42-451f-ae58-f8a2961e0ce4.html  a44cde27-f0d0-4bf6-bf87-ed2d67488222.csv
